--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "email": "hello@kylebolton.me"
   },
   "dependencies": {
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
